--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,12 @@
   }
 }
 
+html, body {
+  max-height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
